--- a/src/main/webapp/app/entities/ligne-commande/ligne-commande-detail.html
+++ b/src/main/webapp/app/entities/ligne-commande/ligne-commande-detail.html
@@ -24,6 +24,10 @@
         <dd>
             <span>{{vm.ligneCommande.prix}}</span>
         </dd>
+        <dt><span data-translate="gestCApp.ligneCommande.taxeTva">Taxe Tva</span></dt>
+        <dd>
+            <span>{{vm.ligneCommande.taxeTva}}</span>
+        </dd>
         <dt><span data-translate="gestCApp.ligneCommande.agent">Agent</span></dt>
         <dd>
             {{vm.ligneCommande.agent.login}}
