--- a/src/main/webapp/app/entities/ligne-commande/ligne-commande-dialog.html
+++ b/src/main/webapp/app/entities/ligne-commande/ligne-commande-dialog.html
@@ -43,6 +43,12 @@
                     ng-model="vm.ligneCommande.prix"
                     />
         </div>
+        <div class="form-group">
+            <label class="control-label" data-translate="gestCApp.ligneCommande.taxeTva" for="field_taxeTva">Taxe Tva</label>
+            <input type="number" class="form-control" name="taxeTva" id="field_taxeTva"
+                    ng-model="vm.ligneCommande.taxeTva"
+                    />
+        </div>
 
         <div class="form-group">
             <label data-translate="gestCApp.ligneCommande.agent" for="field_agent">Agent</label>
