--- a/src/main/webapp/app/entities/ligne-commande/ligne-commandes.html
+++ b/src/main/webapp/app/entities/ligne-commande/ligne-commandes.html
@@ -3,14 +3,14 @@
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
-<!--             <div class="col-xs-4 no-padding-left">
+            <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="ligne-commande.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span class="hidden-xs-down"  data-translate="gestCApp.ligneCommande.home.createLabel">
                         Create new Ligne Commande
                     </span>
                 </button>
-            </div> -->
+            </div>
             <div class="col-xs-8 no-padding-right">
                 <form name="searchForm" class="form-inline">
                     <div class="input-group pull-right" >
@@ -41,6 +41,7 @@
                     <th jh-sort-by="montanttotalht"><span data-translate="gestCApp.ligneCommande.montanttotalht">Montanttotalht</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="montanttotalttc"><span data-translate="gestCApp.ligneCommande.montanttotalttc">Montanttotalttc</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="prix"><span data-translate="gestCApp.ligneCommande.prix">Prix</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="taxeTva"><span data-translate="gestCApp.ligneCommande.taxeTva">Taxe Tva</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="agent.login"><span data-translate="gestCApp.ligneCommande.agent">Agent</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="article.id"><span data-translate="gestCApp.ligneCommande.article">Article</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="commande.id"><span data-translate="gestCApp.ligneCommande.commande">Commande</span> <span class="glyphicon glyphicon-sort"></span></th>
@@ -56,6 +57,7 @@
                     <td>{{ligneCommande.montanttotalht}}</td>
                     <td>{{ligneCommande.montanttotalttc}}</td>
                     <td>{{ligneCommande.prix}}</td>
+                    <td>{{ligneCommande.taxeTva}}</td>
                     <td>
                         {{ligneCommande.agent.login}}
                     </td>
