--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -24,16 +24,11 @@
             </p>
 
             <ul>
-                <li><a href="https://jhipster.github.io/" target="_blank" rel="noopener" data-translate="home.link.homepage">JHipster homepage</a></li>
-                <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener" data-translate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>
-                <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener" data-translate="home.link.bugtracker">JHipster bug tracker</a></li>
-                <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener" data-translate="home.link.chat">JHipster public chat room</a></li>
-                <li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener" data-translate="home.link.follow">follow @java_hipster on Twitter</a></li>
+                <li><a rel="noopener" data-translate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>
+                <li><a target="_blank" rel="noopener" data-translate="home.link.bugtracker">JHipster bug tracker</a></li>
+                <li><a  target="_blank" rel="noopener" data-translate="home.link.chat">JHipster public chat room</a></li>
+                <li><a  target="_blank" rel="noopener" data-translate="home.link.follow">follow @java_hipster on Twitter</a></li>
             </ul>
-
-            <p>
-             <span data-translate="home.like">If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener" data-translate="home.github">GitHub</a>!
-            </p>
         </div>
          <div class="col-md-4">
  <div class="panel pull-right">
