--- a/src/main/webapp/app/entities/client/clients.html
+++ b/src/main/webapp/app/entities/client/clients.html
@@ -52,7 +52,7 @@
                     <td>{{client.reduction}}</td>
                     <td>{{client.telephone}}</td>
                     <td>{{client.email}}</td>
-                    <td class="text-right">
+                    <td class="text-right" has-authority="ROLE_ADMIN" >
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="client-detail({id:client.id})"
