--- a/src/main/webapp/app/entities/decomposition/decompositions.html
+++ b/src/main/webapp/app/entities/decomposition/decompositions.html
@@ -54,7 +54,7 @@
                     <td>
                         <a ui-sref="article-detail({id:decomposition.article.id})">{{decomposition.article.y}}</a>
                     </td>
-                    <td class="text-right">
+                    <td class="text-right" has-authority="ROLE_ADMIN" >
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="decomposition-detail({id:decomposition.id})"
