--- a/src/main/webapp/app/entities/famille-article/famille-articles.html
+++ b/src/main/webapp/app/entities/famille-article/famille-articles.html
@@ -48,7 +48,7 @@
                     <td>{{familleArticle.libelle}}</td>
                     <td>{{familleArticle.code}}</td>
                     <td>{{familleArticle.description}}</td>
-                    <td class="text-right">
+                    <td class="text-right" has-authority="ROLE_ADMIN" >
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="famille-article-detail({id:familleArticle.id})"
