--- a/src/main/webapp/app/entities/forme-article/forme-articles.html
+++ b/src/main/webapp/app/entities/forme-article/forme-articles.html
@@ -46,7 +46,7 @@
                     <td><a ui-sref="forme-article-detail({id:formeArticle.id})">{{formeArticle.id}}</a></td>
                     <td>{{formeArticle.nomForme}}</td>
                     <td>{{formeArticle.quantite}}</td>
-                    <td class="text-right">
+                    <td class="text-right" has-authority="ROLE_ADMIN">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="forme-article-detail({id:formeArticle.id})"
