--- a/src/main/webapp/app/entities/fournisseur/fournisseurs.html
+++ b/src/main/webapp/app/entities/fournisseur/fournisseurs.html
@@ -52,7 +52,7 @@
                     <td>{{fournisseur.telephone}}</td>
                     <td>{{fournisseur.email}}</td>
                     <td>{{fournisseur.adresse}}</td>
-                    <td class="text-right">
+                    <td class="text-right" has-authority="ROLE_ADMIN" >
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="fournisseur-detail({id:fournisseur.id})"
