--- a/src/main/webapp/app/entities/sortie-article/sortie-articles.html
+++ b/src/main/webapp/app/entities/sortie-article/sortie-articles.html
@@ -3,14 +3,14 @@
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-4 no-padding-left">
+<!--             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="sortie-article.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span class="hidden-xs-down"  data-translate="gestCApp.sortieArticle.home.createLabel">
                         Create new Sortie Article
                     </span>
                 </button>
-            </div>
+            </div> -->
             <div class="col-xs-8 no-padding-right">
                 <form name="searchForm" class="form-inline">
                     <div class="input-group pull-right" >
@@ -68,7 +68,7 @@
                     <td>
                         <a ui-sref="client-detail({id:sortieArticle.client.id})">{{sortieArticle.client.id}}</a>
                     </td>
-                    <td class="text-right">
+                    <td class="text-right" has-authority="ROLE_ADMIN" >
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="sortie-article-detail({id:sortieArticle.id})"
