--- a/src/main/webapp/app/comptoir/comptoir.html
+++ b/src/main/webapp/app/comptoir/comptoir.html
@@ -26,7 +26,8 @@
                 <div class="panel">
                     <div class="panel-body">
                         
-
+ <fieldset >        
+                    <legend>Comptoir</legend>
                         <div class="form-group">
                             <div class="input-group bmd-collapse-inline">
                                 <ui-select  ng-model="vm.client">
@@ -44,7 +45,7 @@
               </button>
             </span>
                             </div>
-                        </div>
+                        </div></fieldset>
                         <table class="table table-hover table-condensed ">
                             <tr style="font-weight: bold">
                                 <td>Article</td>
